--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,26 +1,26 @@
 {
-    "DASHBOARD_SHOW": "DASHBOARD_SHOW",
-    "DATA_MANAGE": "DATA_MANAGE",
-    "ROOT_MANAGE": "ROOT_MANAGE",
-    "STATS_SHOW": "STATS_SHOW",
-    "USER_LIST": "USER_LIST",
-    "USER_SHOW": "USER_SHOW",
-    "USER_CREATE": "USER_CREATE",
-    "USER_EDIT": "USER_EDIT",
-    "USER_DELETE": "USER_DELETE",
-    "USER_MANAGE": "USER_MANAGE",
-    "ROLE_LIST": "ROLE_LIST",
-    "ROLE_SHOW": "ROLE_SHOW",
-    "ROLE_CREATE": "ROLE_CREATE",
-    "ROLE_EDIT": "ROLE_EDIT",
-    "ROLE_DELETE": "ROLE_DELETE",
-    "ROLE_MANAGE": "ROLE_MANAGE",
-    "TEAM_LIST": "TEAM_LIST",
-    "TEAM_SHOW": "TEAM_SHOW",
-    "TEAM_CREATE": "TEAM_CREATE",
-    "TEAM_EDIT": "TEAM_EDIT",
-    "TEAM_DELETE": "TEAM_DELETE",
-    "TEAM_MANAGE": "TEAM_MANAGE",
+    "DASHBOARD_SHOW": "SHOW",
+    "DATA_MANAGE": "MANAGE",
+    "ROOT_MANAGE": "MANAGE",
+    "STATS_SHOW": "SHOW",
+    "USER_LIST": "LIST",
+    "USER_SHOW": "SHOW",
+    "USER_CREATE": "CREATE",
+    "USER_EDIT": "EDIT",
+    "USER_DELETE": "DELETE",
+    "USER_MANAGE": "MANAGE",
+    "ROLE_LIST": "LIST",
+    "ROLE_SHOW": "SHOW",
+    "ROLE_CREATE": "CREATE",
+    "ROLE_EDIT": "EDIT",
+    "ROLE_DELETE": "DELETE",
+    "ROLE_MANAGE": "MANAGE",
+    "TEAM_LIST": "LIST",
+    "TEAM_SHOW": "SHOW",
+    "TEAM_CREATE": "CREATE",
+    "TEAM_EDIT": "EDIT",
+    "TEAM_DELETE": "DELETE",
+    "TEAM_MANAGE": "MANAGE",
     "root": "root",
     "manager": "manager",
     "user": "user",
